shopping cart container on mobile and desktop, fixed top and label bugs

--- a/sass/hbmenu.sass
+++ b/sass/hbmenu.sass
@@ -32,12 +32,12 @@ header
 	position: relative
 	.top
 		width: 100%
-		height: 40px
-		line-height: 40px
 		padding: 0 16px
 		.social
 			// 
 		span.right
+			height: 40px
+			line-height: 40px
 			display: block
 			text-align: right
 			font-size: 14px
@@ -57,6 +57,8 @@ header
 				color: #888
 				height: 32px
 				line-height: 32px
+			label
+				padding: 0 16px
 				img
 					vertical-align: middle
 		.search-container
@@ -97,6 +99,17 @@ header
 			img
 				height: 100%
 				width: auto
+		.shopping-cart-container
+			display: none
+			position: absolute
+			min-height: 120px
+			background: #fff
+			width: 368px
+			+borderradius(16px)
+			label.close-cart
+				position: absolute
+				top: 8px
+				right: 16px
 .header-menu
 	background: $menucolor
 	padding: 0
@@ -115,7 +128,7 @@ header
 			@media screen and ( min-width: 641px )
 				&:hover
 					color: darken($menucolor, 28%)
-					+
+					~
 						ul.level-2-container
 							height: auto
 							display: block
@@ -131,6 +144,7 @@ header
 			line-height: 40px
 			font-size: 20px
 			display: block
+			@extend .mobile-only
 		.menu-children-expand
 			display: none
 			&:checked
@@ -217,6 +231,17 @@ header
 @media ( min-width: 641px )
 	.mobile-only
 		display: none !important
+	// on desktop
+	#menu-4:checked
+		~
+			.middle
+				.shopping-cart-container
+					border: 1px solid $menucolor
+					border-bottom-width: 2px
+					display: block
+					left: 60px
+					top: 120px
+					z-index: 3
 
 @media ( max-width: 640px )
 	.desktop-only
@@ -269,6 +294,16 @@ header
 					text-align: center
 					background: lighten($menucolor, 5%)
 					display: block
+	#menu-4:checked
+		~
+			.middle
+				.shopping-cart-container
+					top: 50px
+					width: 100%
+					border-bottom: 1px solid #777
+					display: block
+					+borderradius(0)
+
 .mobile-logo
 	width: 100%
 	text-align: center
